<resources>
    <string name="iniciar">Iniciar</string>
    <string name="app_name">AppTreineeOnGrid</string>
    <string name="R1">A</string>
    <string name="R2">B</string>
    <string name="R3">C</string>
    <string name="pergunta">PERGUNTAS</string>
    <string name="vcSabia">Você Sabia?</string>
    <string name="score">Score: 0</string>
    <string name="b_continuar">Continuar</string>
    <string name="curiosidade">Curiosidades</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>