<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TJview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_medio"
    tools:context=".TelaJogo">

    <ImageView
        android:id="@+id/TJvoltar"
        android:layout_width="45dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TJOpc3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icons8_casa_64" />

    <Button
        android:id="@+id/TJOpc1"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/R1"
        android:textAllCaps="false"
        android:textColor="#071e50"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TJimageView"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/TJOpc2"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/R2"
        android:textAllCaps="false"
        android:textColor="#071e50"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TJOpc1"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/TJOpc3"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/R3"
        android:textAllCaps="false"
        android:textColor="#071e50"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TJOpc2"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/bolinha_09" />

    <Button
        android:id="@+id/TJcontinuar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/b_continuar"
        android:textColor="#071e50"
        android:textSize="10sp"
        android:visibility="visible"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/TJOpc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/TJqnt_perguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qnt_pergunta"
        android:textColor="#071e50"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/TJimageView"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        app:srcCompat="@drawable/blank" />

    <TextView
        android:id="@+id/TJpergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pergunta"
        android:textAlignment="center"
        android:textColor="#071e50"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/TJimageView"
        app:layout_constraintEnd_toEndOf="@+id/TJimageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TJimageView"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/TJvcSabia"
        android:layout_width="100dp"
        android:layout_height="64dp"
        android:text="@string/vcSabia"
        android:visibility="visible"
        app:backgroundTint="#071e50"
        app:layout_constraintBottom_toTopOf="@+id/TJcontinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <ImageView
        android:id="@+id/TJrosto_feliz"
        android:layout_width="125dp"
        android:layout_height="121dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/TJvcSabia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/acerto__14" />

    <ImageView
        android:id="@+id/TJrosto_triste"
        android:layout_width="124dp"
        android:layout_height="119dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/TJvcSabia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/erro_14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="622dp" />

</androidx.constraintlayout.widget.ConstraintLayout>